[gd_scene load_steps=62 format=2]

[ext_resource path="res://Lights/Light_option_31.jpg" type="Texture" id=1]
[ext_resource path="res://MainMenu/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Lights/Light_option_41_Light.jpg" type="Texture" id=3]
[ext_resource path="res://Lights/Light_option_21.jpg" type="Texture" id=4]
[ext_resource path="res://Lights/Light_option_11_Light.jpg" type="Texture" id=5]
[ext_resource path="res://Map/MapMulti.gd" type="Script" id=6]
[ext_resource path="res://Map/Map_proper_vs_0.2.jpg" type="Texture" id=7]
[ext_resource path="res://Lights/Light_option_11.jpg" type="Texture" id=8]
[ext_resource path="res://Lights/Light_option_31_Light.jpg" type="Texture" id=9]
[ext_resource path="res://Lights/Light_option_12.jpg" type="Texture" id=10]
[ext_resource path="res://Lights/Light_option_22_Light.jpg" type="Texture" id=11]
[ext_resource path="res://Lights/Light_option_23_Light.jpg" type="Texture" id=12]
[ext_resource path="res://Lights/Light_option_14.jpg" type="Texture" id=13]
[ext_resource path="res://Lights/Light_option_23.jpg" type="Texture" id=14]
[ext_resource path="res://Lights/Light_option_21_Light.jpg" type="Texture" id=15]
[ext_resource path="res://Lights/Light_option_41.jpg" type="Texture" id=16]
[ext_resource path="res://Lights/Light_option_32_Light.jpg" type="Texture" id=17]
[ext_resource path="res://Lights/Light_option_42_Light.jpg" type="Texture" id=18]
[ext_resource path="res://Lights/Light_option_32.jpg" type="Texture" id=19]
[ext_resource path="res://Lights/Light_option_22.jpg" type="Texture" id=20]
[ext_resource path="res://Lights/Light_option_42.jpg" type="Texture" id=21]
[ext_resource path="res://Lights/Light_option_12_Light.jpg" type="Texture" id=22]
[ext_resource path="res://Lights/Light_option_13_Light.jpg" type="Texture" id=23]
[ext_resource path="res://Lights/Light_option_33.jpg" type="Texture" id=24]
[ext_resource path="res://Lights/Light_option_13.jpg" type="Texture" id=25]
[ext_resource path="res://Lights/Light_option_24.jpg" type="Texture" id=26]
[ext_resource path="res://Lights/Light_option_44.jpg" type="Texture" id=27]
[ext_resource path="res://Lights/Light_option_34_Light.jpg" type="Texture" id=28]
[ext_resource path="res://Lights/Light_option_34.jpg" type="Texture" id=29]
[ext_resource path="res://Lights/Light_option_33_Light.jpg" type="Texture" id=30]
[ext_resource path="res://Lights/Light_option_14_Light.jpg" type="Texture" id=31]
[ext_resource path="res://Lights/Light_option_44_Light.jpg" type="Texture" id=32]
[ext_resource path="res://Lights/Light_option_24_Light.jpg" type="Texture" id=33]
[ext_resource path="res://Lights/Light_option_43_Light.jpg" type="Texture" id=34]
[ext_resource path="res://Lights/Light_option_43.jpg" type="Texture" id=35]
[ext_resource path="res://Lights/LightButtonGroup.tscn" type="PackedScene" id=36]
[ext_resource path="res://Road.gd" type="Script" id=37]
[ext_resource path="res://UI/ScoreDisplay.tscn" type="PackedScene" id=38]
[ext_resource path="res://UI/TimerDisplay.tscn" type="PackedScene" id=39]
[ext_resource path="res://Sounds/1_CarExit.wav" type="AudioStream" id=40]
[ext_resource path="res://MainMenu/Title.tres" type="DynamicFont" id=41]
[ext_resource path="res://UI/Instructions.tscn" type="PackedScene" id=42]
[ext_resource path="res://UI/Instructions.gd" type="Script" id=43]
[ext_resource path="res://Sounds/6_MenuMouseEnter.wav" type="AudioStream" id=44]
[ext_resource path="res://Sounds/8_MenuPress.wav" type="AudioStream" id=45]
[ext_resource path="res://Map/PausePopup.gd" type="Script" id=46]
[ext_resource path="res://Map/GameOverPopupMenu.gd" type="Script" id=47]
[ext_resource path="res://Sounds/terrific-lights-gameover.ogg" type="AudioStream" id=48]
[ext_resource path="res://Sounds/terrific-lights-win.ogg" type="AudioStream" id=49]
[ext_resource path="res://Sounds/VictoryAudio.gd" type="Script" id=50]
[ext_resource path="res://Sounds/GameOverAudio.gd" type="Script" id=51]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0.996078, 0.988235, 0.988235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_color = Color( 0.996078, 0.988235, 0.988235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_color = Color( 0.996078, 0.988235, 0.988235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 42
outline_color = Color( 0.996078, 0.988235, 0.988235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 35
outline_color = Color( 0.996078, 0.988235, 0.988235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
outline_color = Color( 0.996078, 0.988235, 0.988235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
outline_color = Color( 0.996078, 0.988235, 0.988235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 36
font_data = ExtResource( 2 )

[node name="Map" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960.899, 538.361 )
scale = Vector2( 0.797276, 0.801192 )
texture = ExtResource( 7 )

[node name="Road" type="Node2D" parent="."]
script = ExtResource( 37 )
__meta__ = {
"_edit_lock_": true
}

[node name="UpperLeft" parent="Road" instance=ExtResource( 36 )]

[node name="NorthSouthRight" parent="Road/UpperLeft" index="0"]
position = Vector2( 862, 442 )

[node name="LightOn" parent="Road/UpperLeft/NorthSouthRight" index="0"]
texture = ExtResource( 5 )

[node name="LightOff" parent="Road/UpperLeft/NorthSouthRight" index="1"]
texture = ExtResource( 8 )

[node name="NorthSouthLeft" parent="Road/UpperLeft" index="1"]
position = Vector2( 862, 238 )

[node name="LightOn" parent="Road/UpperLeft/NorthSouthLeft" index="0"]
texture = ExtResource( 9 )

[node name="LightOff" parent="Road/UpperLeft/NorthSouthLeft" index="1"]
texture = ExtResource( 1 )

[node name="EastWestRight" parent="Road/UpperLeft" index="2"]
position = Vector2( 658, 442 )

[node name="LightOn" parent="Road/UpperLeft/EastWestRight" index="0"]
texture = ExtResource( 15 )

[node name="LightOff" parent="Road/UpperLeft/EastWestRight" index="1"]
texture = ExtResource( 4 )

[node name="EastWestLeft" parent="Road/UpperLeft" index="3"]
position = Vector2( 658, 238 )

[node name="LightOn" parent="Road/UpperLeft/EastWestLeft" index="0"]
texture = ExtResource( 3 )

[node name="LightOff" parent="Road/UpperLeft/EastWestLeft" index="1"]
texture = ExtResource( 16 )

[node name="UpperRight" parent="Road" instance=ExtResource( 36 )]

[node name="NorthSouthRight" parent="Road/UpperRight" index="0"]
position = Vector2( 1262, 442 )

[node name="LightOn" parent="Road/UpperRight/NorthSouthRight" index="0"]
texture = ExtResource( 22 )

[node name="LightOff" parent="Road/UpperRight/NorthSouthRight" index="1"]
texture = ExtResource( 10 )

[node name="NorthSouthLeft" parent="Road/UpperRight" index="1"]
position = Vector2( 1262, 238 )

[node name="LightOn" parent="Road/UpperRight/NorthSouthLeft" index="0"]
texture = ExtResource( 17 )

[node name="LightOff" parent="Road/UpperRight/NorthSouthLeft" index="1"]
texture = ExtResource( 19 )

[node name="EastWestRight" parent="Road/UpperRight" index="2"]
position = Vector2( 1058, 442 )

[node name="LightOn" parent="Road/UpperRight/EastWestRight" index="0"]
texture = ExtResource( 11 )

[node name="LightOff" parent="Road/UpperRight/EastWestRight" index="1"]
texture = ExtResource( 20 )

[node name="EastWestLeft" parent="Road/UpperRight" index="3"]
position = Vector2( 1058, 238 )

[node name="LightOn" parent="Road/UpperRight/EastWestLeft" index="0"]
texture = ExtResource( 18 )

[node name="LightOff" parent="Road/UpperRight/EastWestLeft" index="1"]
texture = ExtResource( 21 )

[node name="LowerRight" parent="Road" instance=ExtResource( 36 )]

[node name="NorthSouthRight" parent="Road/LowerRight" index="0"]
position = Vector2( 1262, 843 )

[node name="LightOn" parent="Road/LowerRight/NorthSouthRight" index="0"]
texture = ExtResource( 31 )

[node name="LightOff" parent="Road/LowerRight/NorthSouthRight" index="1"]
texture = ExtResource( 13 )

[node name="NorthSouthLeft" parent="Road/LowerRight" index="1"]
position = Vector2( 1262, 639 )

[node name="LightOn" parent="Road/LowerRight/NorthSouthLeft" index="0"]
texture = ExtResource( 28 )

[node name="LightOff" parent="Road/LowerRight/NorthSouthLeft" index="1"]
texture = ExtResource( 29 )

[node name="EastWestRight" parent="Road/LowerRight" index="2"]
position = Vector2( 1058, 843 )

[node name="LightOn" parent="Road/LowerRight/EastWestRight" index="0"]
texture = ExtResource( 33 )

[node name="LightOff" parent="Road/LowerRight/EastWestRight" index="1"]
texture = ExtResource( 26 )

[node name="EastWestLeft" parent="Road/LowerRight" index="3"]
position = Vector2( 1058, 639 )

[node name="LightOn" parent="Road/LowerRight/EastWestLeft" index="0"]
texture = ExtResource( 32 )

[node name="LightOff" parent="Road/LowerRight/EastWestLeft" index="1"]
texture = ExtResource( 27 )

[node name="LowerLeft" parent="Road" instance=ExtResource( 36 )]

[node name="NorthSouthRight" parent="Road/LowerLeft" index="0"]
position = Vector2( 862, 843 )

[node name="LightOn" parent="Road/LowerLeft/NorthSouthRight" index="0"]
texture = ExtResource( 23 )

[node name="LightOff" parent="Road/LowerLeft/NorthSouthRight" index="1"]
texture = ExtResource( 25 )

[node name="NorthSouthLeft" parent="Road/LowerLeft" index="1"]
position = Vector2( 862, 639 )

[node name="LightOn" parent="Road/LowerLeft/NorthSouthLeft" index="0"]
texture = ExtResource( 30 )

[node name="LightOff" parent="Road/LowerLeft/NorthSouthLeft" index="1"]
texture = ExtResource( 24 )

[node name="EastWestRight" parent="Road/LowerLeft" index="2"]
position = Vector2( 658, 843 )

[node name="LightOn" parent="Road/LowerLeft/EastWestRight" index="0"]
texture = ExtResource( 12 )

[node name="LightOff" parent="Road/LowerLeft/EastWestRight" index="1"]
texture = ExtResource( 14 )

[node name="EastWestLeft" parent="Road/LowerLeft" index="3"]
position = Vector2( 658, 639 )

[node name="LightOn" parent="Road/LowerLeft/EastWestLeft" index="0"]
texture = ExtResource( 34 )

[node name="LightOff" parent="Road/LowerLeft/EastWestLeft" index="1"]
texture = ExtResource( 35 )

[node name="Cars" type="Node" parent="."]

[node name="Darken" type="ColorRect" parent="."]
visible = false
margin_right = 1901.0
margin_bottom = 1075.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PausePopup" type="Popup" parent="."]
pause_mode = 2
margin_left = 802.0
margin_top = 382.0
margin_right = 1118.0
margin_bottom = 699.0
mouse_filter = 2
popup_exclusive = true
script = ExtResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="Label" parent="PausePopup"]
margin_top = 60.0
margin_right = 304.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 41 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PausePopup"]
margin_left = 60.0
margin_top = 120.0
margin_right = 253.0
margin_bottom = 178.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="PausePopup/VBoxContainer"]
margin_right = 227.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="PausePopup/VBoxContainer"]
margin_top = 48.0
margin_right = 227.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 2 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsButton" type="Button" parent="PausePopup/VBoxContainer"]
margin_top = 96.0
margin_right = 227.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 3 )
text = "Instructions"

[node name="QuitButton" type="Button" parent="PausePopup/VBoxContainer"]
margin_top = 144.0
margin_right = 227.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 4 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAudio" type="Node" parent="PausePopup"]

[node name="OnHover" type="AudioStreamPlayer" parent="PausePopup/ButtonAudio"]
stream = ExtResource( 44 )
bus = "Buttons"

[node name="OnClick" type="AudioStreamPlayer" parent="PausePopup/ButtonAudio"]
stream = ExtResource( 45 )
bus = "Buttons"

[node name="ScoreDisplay" parent="." instance=ExtResource( 38 )]
margin_left = 491.0
margin_top = 60.0
margin_right = 531.0
margin_bottom = 100.0

[node name="GameTimer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true

[node name="TimeDisplay" parent="." instance=ExtResource( 39 )]
margin_left = 1329.0
margin_top = 70.0
margin_right = 1369.0
margin_bottom = 110.0

[node name="CarExitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 40 )
volume_db = -3.0
bus = "Buttons"

[node name="GameOverPopupMenu" type="Popup" parent="."]
pause_mode = 2
margin_left = 802.0
margin_top = 382.0
margin_right = 1118.0
margin_bottom = 699.0
mouse_filter = 2
popup_exclusive = true
script = ExtResource( 47 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameOverPopupMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="GameOverPopupMenu"]
margin_top = 31.0
margin_right = 316.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.843137, 0.109804, 0.109804, 1 )
text = "GAME OVER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="GameOverPopupMenu"]
margin_top = 84.0
margin_right = 316.0
margin_bottom = 142.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="GameOverPopupMenu/Options"]
margin_right = 316.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 6 )
align = 1

[node name="RetryButton" type="Button" parent="GameOverPopupMenu/Options"]
margin_top = 47.0
margin_right = 316.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 7 )
text = "Retry"

[node name="ReturnToMenuButton" type="Button" parent="GameOverPopupMenu/Options"]
margin_top = 95.0
margin_right = 316.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 8 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAudio" type="Node" parent="GameOverPopupMenu"]

[node name="OnHover" type="AudioStreamPlayer" parent="GameOverPopupMenu/ButtonAudio"]
stream = ExtResource( 44 )
bus = "Buttons"

[node name="OnClick" type="AudioStreamPlayer" parent="GameOverPopupMenu/ButtonAudio"]
stream = ExtResource( 45 )
bus = "Buttons"

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -25, -39, -25, 1128, 1969, 1122, 1952, -72, 35, -66, 481, 60, 1439, 60, 1439, 1020, 481, 1020, 481, 75, 481, 28, -30, -92 )
__meta__ = {
"_edit_lock_": true
}

[node name="Instructions" type="Polygon2D" parent="."]
pause_mode = 2
visible = false
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -8.24306, -55, 1944.76, -52, 1946.76, 1105, -15.2431, 1107, -15.2431, 1107 )
script = ExtResource( 43 )

[node name="Heading" type="Label" parent="Instructions"]
anchor_bottom = 256.0
margin_top = 64.0
margin_right = 1920.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 9 )
text = "How to play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" parent="Instructions" instance=ExtResource( 42 )]
margin_top = 176.0
margin_bottom = 255.0
text = "Your mission is to get the traffic flowing in an orderly manner by controlling the traffic lights."
align = 3

[node name="Instructions2" parent="Instructions" instance=ExtResource( 42 )]
margin_top = 288.75
margin_bottom = 576.75
text = "There are four intersections, each of which contain four light control buttons from which you can choose which cars can enter the intersection:

1. Cars coming from North and South going STRAIGHT or turning RIGHT.
2. Cars coming from North and South turning LEFT.
3. Cars coming from East and West going STRAIGHT or turning RIGHT.
4. Cars coming from East and West turning LEFT."
align = 3
max_lines_visible = -1

[node name="Instructions3" parent="Instructions" instance=ExtResource( 42 )]
margin_top = 624.75
margin_bottom = 662.75
text = "One game lasts for five minutes."

[node name="Instructions4" parent="Instructions" instance=ExtResource( 42 )]
margin_top = 712.75
margin_bottom = 791.75
text = "You get points from each car that successfully navigates its way through the intersections and exits the game field. The quicker the car exits the game field, the more points you will get!"
align = 3
max_lines_visible = -1

[node name="Instructions5" parent="Instructions" instance=ExtResource( 42 )]
margin_top = 840.75
margin_bottom = 878.75
text = "If a car doesn't exit the game field within 99 seconds, the game ends."

[node name="Button" type="Button" parent="Instructions"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 892.0
margin_top = 968.0
margin_right = 1028.0
margin_bottom = 1019.0
custom_fonts/font = SubResource( 10 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAudio" type="Node" parent="Instructions"]

[node name="OnHover" type="AudioStreamPlayer" parent="Instructions/ButtonAudio"]
stream = ExtResource( 44 )
bus = "Buttons"

[node name="OnClick" type="AudioStreamPlayer" parent="Instructions/ButtonAudio"]
stream = ExtResource( 45 )
bus = "Buttons"

[node name="VictoryAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 49 )
volume_db = -6.0
bus = "Music"
script = ExtResource( 50 )

[node name="GameOverAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 48 )
bus = "Music"
script = ExtResource( 51 )
[connection signal="pressed" from="PausePopup/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PausePopup/VBoxContainer/RestartButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PausePopup/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PausePopup/VBoxContainer/InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="PausePopup/VBoxContainer/QuitButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PausePopup/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="pressed" from="GameOverPopupMenu/Options/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="GameOverPopupMenu/Options/ReturnToMenuButton" to="." method="_on_ReturnToMenuButton_pressed"]
[connection signal="mouse_entered" from="Instructions/Button" to="Instructions" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Instructions/Button" to="Instructions" method="_on_Button_pressed"]
[connection signal="finished" from="VictoryAudio" to="VictoryAudio" method="_on_VictoryAudio_finished"]
[connection signal="finished" from="GameOverAudio" to="GameOverAudio" method="_on_GameOverAudio_finished"]

[editable path="Road/UpperLeft"]

[editable path="Road/UpperLeft/NorthSouthRight"]

[editable path="Road/UpperLeft/NorthSouthLeft"]

[editable path="Road/UpperLeft/EastWestRight"]

[editable path="Road/UpperLeft/EastWestLeft"]

[editable path="Road/UpperRight"]

[editable path="Road/UpperRight/NorthSouthRight"]

[editable path="Road/UpperRight/NorthSouthLeft"]

[editable path="Road/UpperRight/EastWestRight"]

[editable path="Road/UpperRight/EastWestLeft"]

[editable path="Road/LowerRight"]

[editable path="Road/LowerRight/NorthSouthRight"]

[editable path="Road/LowerRight/NorthSouthLeft"]

[editable path="Road/LowerRight/EastWestRight"]

[editable path="Road/LowerRight/EastWestLeft"]

[editable path="Road/LowerLeft"]

[editable path="Road/LowerLeft/NorthSouthRight"]

[editable path="Road/LowerLeft/NorthSouthLeft"]

[editable path="Road/LowerLeft/EastWestRight"]

[editable path="Road/LowerLeft/EastWestLeft"]
